Use new ngc7293/influx-cpp for Influx access

--- a/ganymede/services/measurements/CMakeLists.txt
+++ b/ganymede/services/measurements/CMakeLists.txt
@@ -10,4 +10,4 @@ add_microservice(
         measurements.service_config.proto
 )
 
-target_link_libraries(ganymede.services.measurements)
+target_link_libraries(ganymede.services.measurements PRIVATE influx)
