--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,9 +17,6 @@ jobs:
   build-local:
     needs: validate-style
 
-    container:
-      image: ghcr.io/ngc7293/cxxci:jammy
-
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -27,8 +24,12 @@ jobs:
         with:
           submodules: true
 
-      - name: Install Conan
+      - name: Install tools
+        run: sudo apt-get install g++-12 gcc-12 ninja-build
+
+      - name: Configure Conan
         run: |
+          pip install conan
           conan config set general.revisions_enabled=1
           conan remote add davidbourgault https://artifactory.davidbourgault.ca/artifactory/api/conan/conan
           conan user -p ${{ secrets.CONAN_PASSWORD }} -r davidbourgault david
