--- a/src/ganymede/services/device/Dockerfile
+++ b/src/ganymede/services/device/Dockerfile
@@ -1,15 +1,18 @@
-FROM ghcr.io/ngc7293/cxxci:latest AS build
+FROM ghcr.io/ngc7293/cxxci:jammy AS build
 
 # Third parties
 ENV CONAN_USER_HOME=/var/build/
 COPY conanfile.txt  /var/build/
 WORKDIR /var/build/build
-RUN conan install .. -s compiler.libcxx=libstdc++11 -s cppstd=20 -s build_type=Release
 
-# Copy project source
+RUN conan config set general.revisions_enabled=1
+RUN conan remote add davidbourgault https://artifactory.davidbourgault.ca/artifactory/api/conan/conan
+RUN conan install .. --settings compiler.libcxx=libstdc++11 --settings build_type=Release --remote davidbourgault
+
+# # Copy project source
 COPY CMakeLists.txt /var/build/
 COPY libs           /var/build/libs
-COPY ganymede       /var/build/ganymede
+COPY src            /var/build/src
 
 # Build project
 WORKDIR /var/build/build
@@ -22,10 +25,10 @@ RUN apt-get update
 RUN apt-get -y install ca-certificates
 
 COPY --from=build /var/build/build/bin/ /opt/bin/
-COPY ganymede/services/device/device.service_config.json /opt/var/
+COPY src/ganymede/services/device/device.config.json /opt/var/
 
 ENV PORT=3000
 
 EXPOSE ${PORT}
 WORKDIR /opt/
-ENTRYPOINT ["./bin/ganymede.services.device", "./var/device.service_config.json"]
+ENTRYPOINT ["./bin/ganymede.services.device", "./var/device.config.json"]
