--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,11 @@ jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
 log = "0.4.19"
 prost = "0.11.9"
 prost-types = "0.11.9"
+regex = "1.8.4"
 serde = "1.0.164"
 serde_json = "1.0.96"
 sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
-regex = "1.8.4"
+time = "0.3.26"
 tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
 toml = "0.5.8"
 tonic = "0.9.2"
