--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,12 +37,16 @@ jobs:
         uses: actions/checkout@v3.3.0
 
       - name: Build image
-        run: docker build . -t ghcr.io/ngc7293/ganymede:latest
+        run: docker build . -t ganymede
 
       - name: Push latest (from develop)
         if: ${{ github.ref == 'refs/heads/develop' }}
-        run: docker push --all-tags ghcr.io/ngc7293/ganymede:latest
+        run: |
+          docker tag ganymede ghcr.io/ngc7293/ganymede:latest
+          docker push --all-tags ghcr.io/ngc7293/ganymede:latest
 
       - name: Push stable (from main)
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: docker push --all-tags ghcr.io/ngc7293/ganymede:stable
+        run: |
+          docker tag ganymede ghcr.io/ngc7293/ganymede:stable
+          docker push --all-tags ghcr.io/ngc7293/ganymede:stable
