--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         run: sudo apt-get install protobuf-compiler
 
       - name: Launch Database for testing
-        run: docker compose up database --detach
+        run: docker compose up postgres --detach
 
       - name: Test
         env:
