--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ futures = "0.3.28"
 jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
 log = "0.4.19"
 prost = "0.11.9"
+prost-types = "0.11.9"
 serde = "1.0.164"
 serde_json = "1.0.96"
 sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
