Adds timezone information to Device These changes required the addition of the date library, since C++20 chrono support is still lacking in G++.
- Moves timezone field from Config to Device
- Adds timezone_offset_minutes to Device
- Refactors input sanitization/validation in DeviceServiceImpl
- More tests for DeviceServiceImpl
- Moves MockAuthValidator to ganymede::testing
- Adds ServiceTest to ganymede::testing

--- a/src/ganymede/testing/CMakeLists.txt
+++ b/src/ganymede/testing/CMakeLists.txt
@@ -1,10 +1,14 @@
 add_library(ganymede.testing STATIC
     docker.hh
+    mock_auth_validator.hh
+    service_test.hh
     void.cc
 )
 
 target_link_libraries(ganymede.testing
     PUBLIC
+        CONAN_PKG::grpc
+        CONAN_PKG::gtest
         CONAN_PKG::libcurl
         CONAN_PKG::nlohmann_json
 )
