--- a/src/ganymede/services/device/CMakeLists.txt
+++ b/src/ganymede/services/device/CMakeLists.txt
@@ -17,6 +17,7 @@ add_microservice(
 target_link_libraries(ganymede.services.device.core
     PUBLIC
         ganymede.mongo
+        CONAN_PKG::date
         CONAN_PKG::mongo-cxx-driver
         CONAN_PKG::mongo-c-driver
 )
