--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,9 +88,32 @@ jobs:
         with:
           submodules: true
 
+      - name: Install tools
+        run: sudo apt-get install g++-12 gcc-12
+
+      - name: Configure Conan
+        run: |
+          pip install conan
+          conan config set general.revisions_enabled=1
+          conan remote add davidbourgault https://artifactory.davidbourgault.ca/artifactory/api/conan/conan
+          conan user -p ${{ secrets.CONAN_PASSWORD }} -r davidbourgault david
+
+      - name: Create directories
+        run: mkdir build
+
+      - name: Install Third Parties
+        working-directory: build
+
+        run: conan install .. --update --build=never --settings compiler.version=12 --settings compiler.libcxx=libstdc++11 --settings build_type=Release --remote=davidbourgault
+
       - name: Build Docker image
         working-directory: build
-        run: cmake --build . --target ganymede.services.device.docker
+        env:
+          CC: gcc-12
+          CXX: g++-12
+        run: |
+          cmake ..
+          cmake --build . --target ganymede.services.device.docker
 
       - name: Push
         run: docker push --all-tags ghcr.io/ngc7293/ganymede/device.service
