--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.68"
+base64 = "0.21.5"
 chrono = "0.4.26"
 chrono-tz = "0.8.2"
 env_logger = "0.10.0"
@@ -31,3 +32,7 @@ tonic-build = "0.9.2"
 [[bin]]
 name = "ganymede"
 path = "src/main.rs"
+
+[[bin]]
+name = "b64uuid"
+path = "src/tools/b64uuid.rs"
